[project]
name = "spm"
version = "0.1.0"
description = "Stock Pattern Matcher"
authors = [
    {name = "zhowzeng", email = "zenglihao106@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
