[project]
name = "spm"
version = "0.1.0"
description = "Stock Pattern Matcher"
authors = [
    {name = "zhowzeng", email = "zenglihao106@gmail.com"},
]
dependencies = [
    "streamlit>=1.29.0",
    "requests>=2.31.0",
    "SQLAlchemy>=2.0.23",
    "pandas>=2.1.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
]
